--- a/estilos.css
+++ b/estilos.css
@@ -25,5 +25,41 @@
     h1 {
       color: #0077cc;
     }
+
+body {
+  margin: 0;
+  background-color: #181818; /* Fondo oscuro */
+  font-family: Arial, sans-serif;
+}
+
+.navbar {
+  background-color: #1c1c1c;
+  padding: 10px 0;
+}
+
+.nav-list {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+}
+
+.nav-list li {
+  margin: 0 20px;
+}
+
+.nav-list a {
+  color: #bbb;
+  text-decoration: none;
+  font-weight: bold;
+  letter-spacing: 1px;
+  transition: color 0.3s;
+}
+
+.nav-list a:hover {
+  color: white;
+}
   </style>
 </head>
